# konsole

./: CMakeLists.txt  README.md  cmd.c  konsole.c  library.json  line.c  platformio.ini  static.h  version.h
adapters/: README.md  arduino_serial.cpp  espidf_uart.c  nrf5_app_uart.c  stm32_hal_uart.c
cmake/: konsoleConfig.cmake.in
components/konsole/: CMakeLists.txt
examples/: arduino_main.ino
examples/arduino_serial/: platformio.ini
examples/arduino_serial/src/: main.cpp
examples/espidf_uart/: platformio.ini
examples/espidf_uart/main/: main.c
include/konsole/: konsole.h  konsole_config.h.in  konsole_priv.h  npf.h  version.h
src/: cmd.c  io.h  konsole.c  konsole_priv.h  line.c  npf.c  static.h  version.h
